include/expanse.h

/* ---- Concurrent types: one writer, optimistic readers ---------------- */

/*
 * The capability classic Judy has no answer for. Writers serialize
 * internally; readers run an optimistic validated walk with epoch-based
 * reclamation, so a reader never dereferences freed memory and, on the
 * common path, takes no lock and does not block a writer. The protocol is
 * blocking optimistic lock coupling, not lock-free: a read that exhausts its
 * bounded retries falls back to the writer-excluding path (it quiesces
 * writers and takes the writer mutex), and writers wait for that read to
 * finish (docs/ARCHITECTURE.md §4, docs/BENCHMARKING.md for scaling).
 *
 * A container handle is safe to use from any number of threads at once.
 * Readers SHOULD take a reader handle (expanse_sync_*_reader_new) once per
 * thread and reuse it: the one-shot _contains/_get calls register and
 * drop a reader on every call.
 *
 * Reader-handle ownership:
 *  - One handle per reading thread. A handle owns a single epoch slot and
 *    its pins are not reentrant, so calls on ONE handle from two threads at
 *    once are undefined; give each reading thread its own.
 *  - A handle may be passed to, and freed (_reader_free) from, a thread
 *    other than the one that created it, once no call on it is in progress:
 *    every call releases its epoch pin before returning, and freeing
 *    deregisters the handle through the container's registry lock, reading
 *    no thread-local state.
 *  - Freeing a handle while another thread is inside a call on it is
 *    undefined. Freeing it after its parent container is undefined: free
 *    every reader handle before the container.
 */

typedef struct expanse_sync_set expanse_sync_set_t;
typedef struct expanse_sync_set_reader expanse_sync_set_reader_t;
typedef struct expanse_sync_map expanse_sync_map_t;
typedef struct expanse_sync_map_reader expanse_sync_map_reader_t;
bool                expanse_sync_set_remove(expanse_sync_set_t *set, uint64_t key);
bool                expanse_sync_set_contains(const expanse_sync_set_t *set, uint64_t key);
uint64_t            expanse_sync_set_len(const expanse_sync_set_t *set);
expanse_sync_set_reader_t *expanse_sync_set_reader_new(const expanse_sync_set_t *set);
void                       expanse_sync_set_reader_free(expanse_sync_set_reader_t *reader);
bool expanse_sync_set_reader_contains(const expanse_sync_set_reader_t *reader, uint64_t key);
expanse_sync_map_t *expanse_sync_map_new(void);
void                expanse_sync_map_free(expanse_sync_map_t *map);
bool                expanse_sync_map_insert(expanse_sync_map_t *map, uint64_t key,
                                            uint64_t value, uint64_t *old_out);
bool                expanse_sync_map_get(const expanse_sync_map_t *map, uint64_t key,
                                         uint64_t *value_out);
bool                expanse_sync_map_remove(expanse_sync_map_t *map, uint64_t key,
                                            uint64_t *old_out);
uint64_t            expanse_sync_map_len(const expanse_sync_map_t *map);
expanse_sync_map_reader_t *expanse_sync_map_reader_new(const expanse_sync_map_t *map);
void                       expanse_sync_map_reader_free(expanse_sync_map_reader_t *reader);
bool expanse_sync_map_reader_get(const expanse_sync_map_reader_t *reader, uint64_t key,
                                 uint64_t *value_out);