bindings/dotnet/src/Expanse.NET/Native/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_set_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_sync_set_remove(SafeExpanseSyncSetHandle set, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_set_contains")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_sync_set_contains(SafeExpanseSyncSetHandle set, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_set_len")]
    public static extern ulong expanse_sync_set_len(SafeExpanseSyncSetHandle set);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_set_reader_new")]
    public static extern SafeExpanseSyncSetReaderHandle expanse_sync_set_reader_new(SafeExpanseSyncSetHandle set);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_set_reader_free")]
    public static extern void expanse_sync_set_reader_free(IntPtr reader);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_set_reader_contains")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_sync_set_reader_contains(SafeExpanseSyncSetReaderHandle reader, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_new")]
    public static extern SafeExpanseSyncMapHandle expanse_sync_map_new();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_free")]
    public static extern void expanse_sync_map_free(IntPtr map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_sync_map_insert(SafeExpanseSyncMapHandle map, ulong key, ulong value, out ulong old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_sync_map_insert(SafeExpanseSyncMapHandle map, ulong key, ulong value, IntPtr old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_get")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_sync_map_get(SafeExpanseSyncMapHandle map, ulong key, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_sync_map_remove(SafeExpanseSyncMapHandle map, ulong key, out ulong old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_sync_map_remove(SafeExpanseSyncMapHandle map, ulong key, IntPtr old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_len")]
    public static extern ulong expanse_sync_map_len(SafeExpanseSyncMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_reader_new")]
    public static extern SafeExpanseSyncMapReaderHandle expanse_sync_map_reader_new(SafeExpanseSyncMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_reader_free")]
    public static extern void expanse_sync_map_reader_free(IntPtr reader);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_map_reader_get")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_sync_map_reader_get(SafeExpanseSyncMapReaderHandle reader, ulong key, out ulong value_out);

    #endregion
}
